test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/module_const.sw
library;

#[storage(invalid)]
#[inline(invalid)]
#[trace(invalid)]
//! Invalid inner comment.
#[test(invalid)]
#[payable(invalid)]
#[fallback(invalid)]
#[error_type(invalid)]
#[error(invalid)]
const MODULE_CONST: u8 = 0;
